# torrent-name-parser

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yaml
benches/: benchmark.rs
examples/: multiple-episodes.rs  simple.rs
src/: error.rs  lib.rs  metadata.rs  pattern.rs  test.rs
src/metadata/: extension.rs
