[package]
name = "torrent-name-parser"
description = "Torrent name metadata parser"
license = "MIT"
version = "0.1.1"
authors = ["IGI-111 <igi-111@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.2.1"
lazy_static = "1.3"
