[package]
name = "torrent-name-parser"
description = "Torrent name metadata parser"
license = "MIT"
version = "0.11.1"
authors = ["IGI-111 <igi-111@protonmail.com>"]
edition = "2018"
repository = "https://github.com/IGI-111/torrent-name-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.4.0"
criterion-macro = "0.4.0"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "multiple"
path = "examples/multiple-episodes.rs"
